# Image-Processing-Android

./: README.md
AR_K/: settings.gradle.kts
AR_K/app/: build.gradle.kts
AR_K/app/src/main/: AndroidManifest.xml
AR_K/app/src/main/java/com/android/example/ar_k/: MainActivity.kt
AR_K/app/src/main/res/values/: strings.xml  themes.xml
AR_K/gradle/wrapper/: gradle-wrapper.properties
AprilTags/: settings.gradle.kts
AprilTags/app/: build.gradle.kts
AprilTags/app/src/main/: AndroidManifest.xml
AprilTags/app/src/main/cpp/: CMakeLists.txt
AprilTags/app/src/main/res/values/: strings.xml  themes.xml
AprilTags/app/src/main/res/values-night/: themes.xml
AprilTags/gradle/wrapper/: gradle-wrapper.properties
SurfaceView/: settings.gradle.kts
SurfaceView/app/: build.gradle.kts
SurfaceView/app/src/main/: AndroidManifest.xml
SurfaceView/app/src/main/res/layout/: activity_main.xml
SurfaceView/app/src/main/res/values/: strings.xml
SurfaceView/gradle/wrapper/: gradle-wrapper.properties
cameraX_android/: settings.gradle.kts
cameraX_android/app/: build.gradle.kts
cameraX_android/app/src/main/: AndroidManifest.xml
cameraX_android/app/src/main/res/values/: strings.xml  themes.xml
cameraX_android/gradle/wrapper/: gradle-wrapper.properties
configs/: settings.gradle.kts
configs/app/: build.gradle.kts
configs/app/src/main/: AndroidManifest.xml
configs/app/src/main/cpp/: apriltag_jni.cpp
configs/app/src/main/res/values/: strings.xml  themes.xml
configs/app/src/main/res/values-night/: themes.xml
configs/gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
